data/derived/sp14/progs/unify/prog3863.ml.out
Characters 40-41:
  digits n = n;;
             ^
Error: This expression has type int but an expression was expected of type
         int list
